--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/instruction_text"
         android:layout_marginTop="32dp"
+        android:layout_above="@+id/bottom_nav"
         android:visibility="gone">
 
         <LinearLayout
@@ -359,4 +360,11 @@
         </LinearLayout>
     </ScrollView>
 
+    <!-- Bottom navigation -->
+    <include
+        android:id="@+id/bottom_nav"
+        layout="@layout/view_bottom_nav"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_alignParentBottom="true" />
 </RelativeLayout>
