--- a/app/src/main/res/layout/activity_mrz_input.xml
+++ b/app/src/main/res/layout/activity_mrz_input.xml
@@ -11,7 +11,7 @@
         android:id="@+id/content_scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_nav">
+        android:layout_marginBottom="56dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -107,11 +107,5 @@
         </LinearLayout>
     </ScrollView>
 
-    <include
-        android:id="@+id/bottom_nav"
-        layout="@layout/view_bottom_nav"
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
