--- a/app/src/main/res/layout/fragment_anml_claim.xml
+++ b/app/src/main/res/layout/fragment_anml_claim.xml
@@ -16,23 +16,14 @@
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
 
-        <ProgressBar
-            android:id="@+id/anml_progress"
-            style="?android:attr/progressBarStyleLarge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/anml_status_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Checking ANML status..."
-            android:textColor="@color/sidebar_text"
-            android:textSize="16sp"
-            android:paddingTop="12dp"
-            android:paddingBottom="12dp"
+        <ImageView
+            android:id="@+id/anml_loading_gif"
+            android:layout_width="720dp"
+            android:layout_height="720dp"
+            android:src="@drawable/loading"
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="false"
+            android:contentDescription="Loading"
             android:visibility="gone" />
 
         <!-- REGISTER -->
